[gd_scene load_steps=69 format=3 uid="uid://dsi7jbk55r1dn"]

[ext_resource type="Script" path="res://Escenas/gilver.gd" id="1_0em2m"]
[ext_resource type="Texture2D" uid="uid://dvndgbgab8y7f" path="res://Images/Gilver_idle-Sheet.png" id="2_eydpk"]
[ext_resource type="Texture2D" uid="uid://dvx3j2xsf4koc" path="res://Images/Gilver_fall.png" id="2_qu08h"]
[ext_resource type="PackedScene" uid="uid://db6owdw68061q" path="res://Escenas/smokeParticles.tscn" id="2_y574h"]
[ext_resource type="Texture2D" uid="uid://bryn1yt31t8ve" path="res://Images/Gilver_dash.png" id="3_3l57n"]
[ext_resource type="PackedScene" uid="uid://c8d3kb867tme3" path="res://Escenas/dash_particles_right.tscn" id="3_fledt"]
[ext_resource type="Texture2D" uid="uid://c6o466107ccrq" path="res://Images/Gilver_jump.png" id="3_qc7h2"]
[ext_resource type="PackedScene" uid="uid://i8cydcj50dcx" path="res://Escenas/dash_particles_left.tscn" id="4_tryl1"]
[ext_resource type="Texture2D" uid="uid://dqqnklua0o703" path="res://Images/Gilver_walk-Sheet.png" id="5_2w1pj"]
[ext_resource type="Texture2D" uid="uid://njmwhgpvuilm" path="res://Images/Gilver_hurt-Sheet.png" id="6_u5eap"]
[ext_resource type="Script" path="res://Escenas/game_controller.gd" id="6_wpil6"]
[ext_resource type="Script" path="res://Escenas/canvas_layer.gd" id="7_v250j"]
[ext_resource type="Texture2D" uid="uid://32kav8l1r7bc" path="res://Images/heart.png" id="7_xwypm"]
[ext_resource type="Texture2D" uid="uid://ddgyqtf46iusa" path="res://Images/dash_meter_sprite.png" id="14_8bobi"]
[ext_resource type="PackedScene" uid="uid://bdfw07j48nq2q" path="res://Escenas/timer.tscn" id="15_o2wg7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3010l"]
atlas = ExtResource("3_3l57n")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_y378a"]
atlas = ExtResource("2_qu08h")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ocal"]
atlas = ExtResource("6_u5eap")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhubq"]
atlas = ExtResource("6_u5eap")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dmiq"]
atlas = ExtResource("6_u5eap")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsqep"]
atlas = ExtResource("6_u5eap")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc233"]
atlas = ExtResource("6_u5eap")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0poch"]
atlas = ExtResource("2_eydpk")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvjbn"]
atlas = ExtResource("2_eydpk")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl827"]
atlas = ExtResource("2_eydpk")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jh730"]
atlas = ExtResource("2_eydpk")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5p1s"]
atlas = ExtResource("3_qc7h2")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bvoo"]
atlas = ExtResource("5_2w1pj")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk4lc"]
atlas = ExtResource("5_2w1pj")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bw7t7"]
atlas = ExtResource("5_2w1pj")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ti75"]
atlas = ExtResource("5_2w1pj")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_58v1w"]
atlas = ExtResource("5_2w1pj")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w1bh"]
atlas = ExtResource("5_2w1pj")
region = Rect2(192, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgsvn"]
atlas = ExtResource("5_2w1pj")
region = Rect2(0, 192, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd05r"]
atlas = ExtResource("5_2w1pj")
region = Rect2(96, 192, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_syxq8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3010l")
}],
"loop": true,
"name": &"dash",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y378a")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ocal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhubq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dmiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsqep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc233")
}],
"loop": false,
"name": &"hurt",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0poch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvjbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl827")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jh730")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5p1s")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bvoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk4lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bw7t7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ti75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58v1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w1bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgsvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd05r")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uprms"]
size = Vector2(14, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p72r4"]
size = Vector2(16, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_1klfi"]
atlas = ExtResource("14_8bobi")
region = Rect2(0, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpe0p"]
atlas = ExtResource("14_8bobi")
region = Rect2(30, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_kswud"]
atlas = ExtResource("14_8bobi")
region = Rect2(60, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1njj"]
atlas = ExtResource("14_8bobi")
region = Rect2(90, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_bypdw"]
atlas = ExtResource("14_8bobi")
region = Rect2(120, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkbn1"]
atlas = ExtResource("14_8bobi")
region = Rect2(150, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_eet5u"]
atlas = ExtResource("14_8bobi")
region = Rect2(180, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvja1"]
atlas = ExtResource("14_8bobi")
region = Rect2(210, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_eep8f"]
atlas = ExtResource("14_8bobi")
region = Rect2(240, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fpiv"]
atlas = ExtResource("14_8bobi")
region = Rect2(270, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jnxq"]
atlas = ExtResource("14_8bobi")
region = Rect2(300, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_yab0q"]
atlas = ExtResource("14_8bobi")
region = Rect2(330, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4403"]
atlas = ExtResource("14_8bobi")
region = Rect2(360, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_87b5w"]
atlas = ExtResource("14_8bobi")
region = Rect2(390, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvcwm"]
atlas = ExtResource("14_8bobi")
region = Rect2(420, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_abnjd"]
atlas = ExtResource("14_8bobi")
region = Rect2(390, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_elr82"]
atlas = ExtResource("14_8bobi")
region = Rect2(360, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_8puq6"]
atlas = ExtResource("14_8bobi")
region = Rect2(330, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp3wp"]
atlas = ExtResource("14_8bobi")
region = Rect2(300, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujj6c"]
atlas = ExtResource("14_8bobi")
region = Rect2(270, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_cu7u6"]
atlas = ExtResource("14_8bobi")
region = Rect2(240, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3w0y"]
atlas = ExtResource("14_8bobi")
region = Rect2(210, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_2q1w2"]
atlas = ExtResource("14_8bobi")
region = Rect2(180, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw2dt"]
atlas = ExtResource("14_8bobi")
region = Rect2(150, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ondc"]
atlas = ExtResource("14_8bobi")
region = Rect2(120, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_at5v3"]
atlas = ExtResource("14_8bobi")
region = Rect2(90, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv5p5"]
atlas = ExtResource("14_8bobi")
region = Rect2(60, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_71872"]
atlas = ExtResource("14_8bobi")
region = Rect2(30, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_256p4"]
atlas = ExtResource("14_8bobi")
region = Rect2(0, 0, 30, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_oo0ta"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1klfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpe0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kswud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1njj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bypdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkbn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eet5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvja1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eep8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fpiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jnxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yab0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4403")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87b5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvcwm")
}],
"loop": false,
"name": &"default",
"speed": 75.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abnjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elr82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8puq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp3wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujj6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cu7u6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3w0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2q1w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw2dt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ondc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at5v3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv5p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71872")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_256p4")
}],
"loop": false,
"name": &"recharge",
"speed": 24.0
}]

[node name="Gilver" type="CharacterBody2D" groups=["gilver"]]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_0em2m")
jump_particles = ExtResource("2_y574h")
dash_particles_right = ExtResource("3_fledt")
dash_particles_left = ExtResource("4_tryl1")

[node name="game_controller" type="Node2D" parent="." groups=["game_controller"]]
script = ExtResource("6_wpil6")

[node name="gilver_animated" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -9)
sprite_frames = SubResource("SpriteFrames_syxq8")
animation = &"dash"

[node name="Gilver_collision_shape" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_uprms")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_p72r4")

[node name="Gilver_camera" type="Camera2D" parent="."]
offset = Vector2(0, -10)
limit_bottom = 1000
limit_smoothed = true
position_smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="." groups=["interface"]]
script = ExtResource("7_v250j")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 14.0
offset_top = 28.0
offset_right = 70.0
offset_bottom = 44.0

[node name="TextureRect1" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_xwypm")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_xwypm")

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_xwypm")

[node name="dash_meter" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(41.5, 62.25)
scale = Vector2(3.5625, 1.95455)
sprite_frames = SubResource("SpriteFrames_oo0ta")

[node name="dash_timer" type="Timer" parent="."]
one_shot = true

[node name="Timer" parent="." instance=ExtResource("15_o2wg7")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
